fix horizontal scrollbar on small devices

--- a/src/components/hero.scss
+++ b/src/components/hero.scss
@@ -8,6 +8,7 @@
   .row {
     display: flex;
     align-items: center;
+    --bs-gutter-x: 0;
   }
 
   .row>div {
